# FeatureDetector

./: README.md
Clustering/: CMakeLists.txt  Cluster.cpp  Cluster.hpp  Clusterizador.cpp  bloatMain.cpp  f3ull.cpp  ffull.cpp  main.cpp  test.cpp  video.cpp  videoPlayTest.cpp
Clustering/oldFiles/: CMakeLists.txt
Clustering/src/: CMakeLists.txt  Cluster.cpp  Cluster.hpp  Clusterizador.cpp  Clusterizador.hpp  main.cpp  video.cpp
FeatureExtraction/: CMakeLists.txt  clustering.cpp  clustering.txt  main.cpp
